# metrics_diary

./: CMakeLists.txt  CalendarModel.cpp  CalendarModel.h  Main.qml  NotesModel.cpp  NotesModel.h  main.cpp
components/: DayCell.qml  DayDetailsPopup.qml  Fluid.js  MonthGrid.qml  Sizing.js  YearView.qml
style/: Scale.qml  variables.qml
